# arango-query-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
arango_query_core/: __init__.py  exec.py  mapping.py
arango_query_core/nl/: __init__.py  engine.py  fewshot.py  grounding.py  providers.py  seams.py
docs/: PRD.md
tests/: test_mapping_resolver_normalization.py  test_mapping_vci_detection.py  test_nl_engine.py  test_nl_fewshot.py  test_nl_grounding.py  test_nl_providers.py  test_owl_turtle_roundtrip.py
