[project]
name = "arango-query-core"
version = "0.1.0"
description = "Shared conceptual-model and NL substrate for ArangoDB query transpilers (arango-cypher-py, arango-sparql-py)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Arthur Keen" }]
requires-python = ">=3.11"
# The core is deliberately dependency-free: rdflib, requests, PyYAML,
# and rank_bm25 are all imported lazily and gated behind extras, so a
# transpiler that only needs MappingBundle pays for nothing else.
dependencies = []

[project.optional-dependencies]
owl = [
  "rdflib>=7.0",
]
nl = [
  "requests>=2.31",
  "PyYAML>=6.0.0",
  "rank_bm25>=0.2.2",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
  "arango-query-core[owl,nl]",
]

[project.urls]
Repository = "https://github.com/arango-solutions/arango-query-core"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
files = ["arango_query_core"]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arango_query_core"]
